# OzBargain

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHENTICITY_SCORE_FIX.md  CLAUDE.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  DUPLICATE_DEAL_FIX.md  Dockerfile  LLM_INTEGRATION.md  Makefile  OzBargain.code-workspace  README.md  deploy.ps1  deploy.sh  docker-compose.yml  get_chat_id.py  ozbargin-deal-finder.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_deal_processing.py  test_telegram.py  tox.ini  verify_token.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.kiro/specs/ozb-deal-filter/: design.md  requirements.md  tasks.md
.kiro/steering/: git-workflow.md  product.md  structure.md  tech.md
config/: config.example.yaml  dynamic_feeds.yaml
config/backups/: config_backup_20250923_124817.yaml  dynamic_feeds_backup_20250923_130928.yaml  dynamic_feeds_backup_20250923_131019.yaml  dynamic_feeds_backup_20250923_131523.yaml  dynamic_feeds_backup_20250924_091412.yaml  dynamic_feeds_backup_20250924_091435.yaml
docs/: AUTHENTICITY_SCORING_LOGIC.md  DEVELOPMENT_SETUP.md  DYNAMIC_ONLY_FEEDS_SPEC.md  DYNAMIC_ONLY_FEEDS_TASKS.md  TELEGRAM_FEED_MANAGEMENT_DESIGN.md  TELEGRAM_FEED_MANAGEMENT_TASKS.md  TESTING.md
logs/: seen_deals.json
ozb_deal_filter/: __init__.py  interfaces.py  main.py  orchestrator.py
ozb_deal_filter/components/: __init__.py  alert_formatter.py  authenticity_assessor.py  deal_parser.py  feed_command_processor.py  filter_engine.py  git_agent.py  llm_clients.py  llm_evaluator.py  message_dispatcher.py  prompt_manager.py  rss_monitor.py  telegram_bot_handler.py
ozb_deal_filter/models/: __init__.py  alert.py  config.py  deal.py  delivery.py  evaluation.py  filter.py  git.py  telegram.py
ozb_deal_filter/services/: __init__.py  config_manager.py  dynamic_feed_manager.py  evaluation_service.py  telegram_authorizer.py
ozb_deal_filter/utils/: __init__.py  error_handling.py  logging.py  rate_limiter.py  system_monitor.py  url_validator.py
prompts/: deal_evaluator.example.txt  deal_evaluator.insta360Go3.txt
prompts/prompts/: deal_evaluator.example.txt  deal_evaluator.txt
scripts/: manage_models.ps1  manage_models.sh  quality-check.bat  quality-check.py  run-integration-tests.py  run-tests.bat  run-tests.py  setup-dev.bat  setup-dev.py  test_llm_connectivity.py
tests/: __init__.py  conftest.py  integration_fixtures.py  test_alert_formatter.py  test_authenticity_assessor.py  test_benchmark.py  test_config_manager.py  test_deal_parser.py  test_error_handling.py  test_filter_engine.py  test_git_agent.py  test_import.py  test_integration.py  test_llm_evaluator.py  test_logging.py  test_message_dispatcher.py  test_models.py  test_orchestrator.py  test_prompt_manager.py  test_rss_monitor.py  test_system_validation.py  test_telegram_integration.py
