[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ozb-deal-filter"
version = "1.0.0"
description = "OzBargain Deal Filter & Alert System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OzBargain Deal Filter Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "feedparser==6.0.10",
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "python-dateutil==2.8.2",
    "pydantic==2.5.0",
    "beautifulsoup4==4.12.2",
    "openai==1.3.0",
    "anthropic==0.7.0",
    "python-telegram-bot==20.7",
    "discord-webhook==1.3.0",
    "docker==6.1.3",
    "GitPython==3.1.40",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-benchmark==4.0.0",
    "pytest-html==4.1.1",
    "pytest-json-report==1.5.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "flake8-docstrings==1.7.0",
    "flake8-bugbear==23.12.2",
    "flake8-comprehensions==3.14.0",
    "mypy==1.7.1",
    "bandit[toml]==1.7.5",
    "isort==5.13.2",
    "pre-commit==3.6.0",
    "coverage[toml]==7.3.4",
    "tox==4.11.4",
]

[project.urls]
Homepage = "https://github.com/example/ozb-deal-filter"
Repository = "https://github.com/example/ozb-deal-filter"
Issues = "https://github.com/example/ozb-deal-filter/issues"

[tool.setuptools.packages.find]
include = ["ozb_deal_filter*"]
exclude = ["tests*", "docs*", "scripts*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ozb_deal_filter",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=50",
    "--html=reports/pytest_report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=reports/pytest_report.json",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "network: marks tests that require network access",
    "docker: marks tests that require Docker",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["ozb_deal_filter"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "discord_webhook.*",
    "telegram.*",
    "docker.*",
    "git.*",
]
ignore_missing_imports = true

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ozb_deal_filter"]
known_third_party = [
    "feedparser",
    "requests",
    "yaml",
    "dateutil",
    "pydantic",
    "bs4",
    "openai",
    "anthropic",
    "telegram",
    "discord_webhook",
    "docker",
    "git",
    "structlog",
    "pytest",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]
